BEGIN;

CREATE TABLE "role" (
    "id" INT PRIMARY KEY GENERATED BY DEFAULT AS IDENTITY,  -- Role ID
    "name" TEXT NOT NULL                                    -- Role name
);

-- Create table for users
CREATE TABLE "utilisateur" (
    "id" INT PRIMARY KEY GENERATED BY DEFAULT AS IDENTITY,  -- User ID
    "password" TEXT NOT NULL,                               -- Password
    "mail" TEXT UNIQUE NOT NULL,                            -- Email
    "name" VARCHAR(50) NOT NULL,                                   -- Name
    "age" SMALLINT NOT NULL,                                     -- Age
    "available" BOOLEAN NOT NULL,                           -- Availability
    "description" TEXT NOT NULL,                            -- Description of skills
    "portfolio_url" TEXT,                                   -- Portfolio URL
    "profile_mail" TEXT NOT NULL,                           -- Contact email
    "created_at" TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,                             -- Creation date
    "updated_at" TIMESTAMP,                                      -- Last update date
    "role" INT NOT NULL,                                    -- Role ID
    CONSTRAINT fk_role FOREIGN KEY ("role") REFERENCES "role"("id")
);

-- Create table for jobs
CREATE TABLE "job" (
    "id" INT PRIMARY KEY GENERATED BY DEFAULT AS IDENTITY,  -- Job ID
    "name" VARCHAR(50) NOT NULL                                    -- Job name
);

-- Create table for languages
CREATE TABLE "language" (
    "id" INT PRIMARY KEY GENERATED BY DEFAULT AS IDENTITY,  -- Language ID
    "name" VARCHAR(50) NOT NULL                                    -- Language name
);

-- Create table for remunerations
CREATE TABLE "remuneration" (
    "id" INT PRIMARY KEY GENERATED BY DEFAULT AS IDENTITY,  -- Remuneration ID
    "type" VARCHAR(50) NOT NULL                                    -- Type of remuneration
);

CREATE TABLE "utilisateur_job" (
    "id" INT PRIMARY KEY GENERATED BY DEFAULT AS IDENTITY,
    "utilisateur_id" INT NOT NULL,
    "job_id" INT NOT NULL,
    CONSTRAINT fk_utilisateur FOREIGN KEY ("utilisateur_id") REFERENCES "utilisateur"("id") ON DELETE CASCADE,
    CONSTRAINT fk_job FOREIGN KEY ("job_id") REFERENCES "job"("id") ON DELETE CASCADE
);

CREATE TABLE "utilisateur_language" (
    "id" INT PRIMARY KEY GENERATED BY DEFAULT AS IDENTITY,
    "utilisateur_id" INT NOT NULL,
    "language_id" INT NOT NULL,
    CONSTRAINT fk_utilisateur FOREIGN KEY ("utilisateur_id") REFERENCES "utilisateur"("id") ON DELETE CASCADE,
    CONSTRAINT fk_language FOREIGN KEY ("language_id") REFERENCES "language"("id") ON DELETE CASCADE
);

CREATE TABLE "utilisateur_remuneration" (
    "id" INT PRIMARY KEY GENERATED BY DEFAULT AS IDENTITY,
    "utilisateur_id" INT NOT NULL,
    "remuneration_id" INT NOT NULL,
    CONSTRAINT fk_utilisateur FOREIGN KEY ("utilisateur_id") REFERENCES "utilisateur"("id") ON DELETE CASCADE,
    CONSTRAINT fk_remuneration FOREIGN KEY ("remuneration_id") REFERENCES "remuneration"("id") ON DELETE CASCADE
);

COMMIT;