@startuml
' hide the spot
' hide circle

' avoid problems with angled crows feet
skinparam linetype ortho

hide circle

entity "User" {
  *#id : number <<PK>>
  *#mail : text
  *password : text
  name : text
  age : number
  available : boolean
  description : text
  portfolio_url : text
  profile_mail : text
  created_at : date
  updated_at : date
  *role_id: number <<FK>>
}

entity "Job" {
  *#id : number <<PK>>
  name: text
}

entity "Language" {
  *#id : number <<PK>>
  name: text
}

entity "Role" {
  *#id : number <<PK>>
  name : text
}

entity "Remuneration" {
  *#id : number <<PK>>
  type : text
}

User }o--|{ Job
User }o--|{ Language
User }o--|{ Remuneration
User }o--|| Role
@enduml